# SwiftOptimizer

./: Cargo.toml  README.md
src/: dependency_manager.rs  main.rs
